# com.miloooo.game.wcdb

./: .gitignore  .gitmodules  README.md
.github/workflows/: release-unity.yml
unity/: CMakeLists.txt
unity/native/include/: wcdb_unity.h
unity/native/src/: sqlcipher_codec_stub.c  sqlite3_amalgamation.c  wcdb_unity.cpp
unity/native/tests/: smoke.cpp
unity/package/: package.json
unity/package-template/: CHANGELOG.md  README.md
unity/package-template/Plugins/Runtime/: Migration.cs  Miloooo.WCDB.asmdef  Miloooo.WCDB.csproj  Query.cs  RowData.cs  Schema.cs  WcdbDatabase.cs  WcdbException.cs  WcdbPreparedStatement.cs  WcdbQueryResult.cs  WcdbTable.cs  WcdbValue.cs
unity/package-template/Plugins/Runtime/Internal/: WcdbNative.cs  WcdbNativeMarshalling.cs
unity/package-template/Samples~/VersionMigration/: VersionMigrationSample.cs
unity/package/Plugins/Runtime/: Miloooo.WCDB.asmdef  Query.cs  Schema.cs  WcdbDatabase.cs  WcdbPreparedStatement.cs  WcdbTable.cs  WcdbValue.cs  com.miloooo.game.wcdb.asmdef
unity/package/Plugins/iOS/wcdb.xcframework/: Info.plist
unity/package/Samples~/BasicCrud/: BasicCrudSample.cs
unity/package/Samples~/BatchCrud/: BatchCrudSample.cs
unity/scripts/: assemble-package.sh  build-android.sh  build-apple.sh  build-host.sh
